testsuite/tests/partial-sigs/should_fail/ExtraConstraintsWildcardInPatternSplice.stderr

ExtraConstraintsWildcardInPatternSplice.hs:5:8: error:
    Type signatures in patterns not (yet) handled by Template Haskell
      x :: _
